<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ADD_complain_Fragment">


    <Button
        android:id="@+id/button3"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="168dp"
        android:text="@string/send"
        android:background="@color/complainBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText19" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName"
        android:textColorHint="@color/hintColours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:textColorHint="@color/hintColours"
        android:ems="10"
        android:hint="@string/phoneNO"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText19"
        android:layout_width="322dp"
        android:layout_height="127dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="208dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="                                                                               Type here"
        android:inputType="textMultiLine"
        android:textColorHint="@color/hintColours"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText18"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/button"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="168dp"
        android:background="@color/cancelBtn"
        android:text="@string/buttonTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/editText19" />

</androidx.constraintlayout.widget.ConstraintLayout>